# dify-skills

./: .gitignore  CLAUDE.md  README.md  dify_deploy.py  dify_deploy_config.example.json  pyproject.toml  【测试】XGBG-飞鸭记账 - 文字账单提取【V1-20260522】.yml
.claude/commands/: dify-check-yml.md  dify-deploy.md  dify-diff.md  dify-export.md  dify-features.md  dify-get-msg.md  dify-init.md  dify-list.md  dify-logs.md  dify-servers.md  dify-sync-name.md  dify-test.md  dify-unbind.md  dify-versions.md
doc/: test-report-final.txt  test-report-tokens.txt  test-report-tokens2.txt  test-report-tokens3.txt  test-report.txt
script_temp/: dify_deploy.py
src/dify_cli/: __init__.py  auth.py  cli.py  config.py  mapping.py  utils.py
src/dify_cli/commands/: __init__.py  check_cmd.py  deploy_cmd.py  diff_cmd.py  export_cmd.py  features_cmd.py  getmsg_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  logs_cmd.py  servers_cmd.py  sync_name_cmd.py  test_cmd.py  unbind_cmd.py  versions_cmd.py
